; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/lwip-1.4.1/src/core/ipv6/extr_ip6_addr.c_ip_addr_cmp.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/lwip-1.4.1/src/core/ipv6/extr_ip6_addr.c_ip_addr_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_addr = type { i64* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ip_addr_cmp(%struct.ip_addr* %0, %struct.ip_addr* %1) #0 {
  %3 = alloca %struct.ip_addr*, align 8
  %4 = alloca %struct.ip_addr*, align 8
  store %struct.ip_addr* %0, %struct.ip_addr** %3, align 8
  store %struct.ip_addr* %1, %struct.ip_addr** %4, align 8
  %5 = load %struct.ip_addr*, %struct.ip_addr** %3, align 8
  %6 = getelementptr inbounds %struct.ip_addr, %struct.ip_addr* %5, i32 0, i32 0
  %7 = load i64*, i64** %6, align 8
  %8 = getelementptr inbounds i64, i64* %7, i64 0
  %9 = load i64, i64* %8, align 8
  %10 = load %struct.ip_addr*, %struct.ip_addr** %4, align 8
  %11 = getelementptr inbounds %struct.ip_addr, %struct.ip_addr* %10, i32 0, i32 0
  %12 = load i64*, i64** %11, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp eq i64 %9, %14
  br i1 %15, label %16, label %52

16:                                               ; preds = %2
  %17 = load %struct.ip_addr*, %struct.ip_addr** %3, align 8
  %18 = getelementptr inbounds %struct.ip_addr, %struct.ip_addr* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  %20 = getelementptr inbounds i64, i64* %19, i64 1
  %21 = load i64, i64* %20, align 8
  %22 = load %struct.ip_addr*, %struct.ip_addr** %4, align 8
  %23 = getelementptr inbounds %struct.ip_addr, %struct.ip_addr* %22, i32 0, i32 0
  %24 = load i64*, i64** %23, align 8
  %25 = getelementptr inbounds i64, i64* %24, i64 1
  %26 = load i64, i64* %25, align 8
  %27 = icmp eq i64 %21, %26
  br i1 %27, label %28, label %52

28:                                               ; preds = %16
  %29 = load %struct.ip_addr*, %struct.ip_addr** %3, align 8
  %30 = getelementptr inbounds %struct.ip_addr, %struct.ip_addr* %29, i32 0, i32 0
  %31 = load i64*, i64** %30, align 8
  %32 = getelementptr inbounds i64, i64* %31, i64 2
  %33 = load i64, i64* %32, align 8
  %34 = load %struct.ip_addr*, %struct.ip_addr** %4, align 8
  %35 = getelementptr inbounds %struct.ip_addr, %struct.ip_addr* %34, i32 0, i32 0
  %36 = load i64*, i64** %35, align 8
  %37 = getelementptr inbounds i64, i64* %36, i64 2
  %38 = load i64, i64* %37, align 8
  %39 = icmp eq i64 %33, %38
  br i1 %39, label %40, label %52

40:                                               ; preds = %28
  %41 = load %struct.ip_addr*, %struct.ip_addr** %3, align 8
  %42 = getelementptr inbounds %struct.ip_addr, %struct.ip_addr* %41, i32 0, i32 0
  %43 = load i64*, i64** %42, align 8
  %44 = getelementptr inbounds i64, i64* %43, i64 3
  %45 = load i64, i64* %44, align 8
  %46 = load %struct.ip_addr*, %struct.ip_addr** %4, align 8
  %47 = getelementptr inbounds %struct.ip_addr, %struct.ip_addr* %46, i32 0, i32 0
  %48 = load i64*, i64** %47, align 8
  %49 = getelementptr inbounds i64, i64* %48, i64 3
  %50 = load i64, i64* %49, align 8
  %51 = icmp eq i64 %45, %50
  br label %52

52:                                               ; preds = %40, %28, %16, %2
  %53 = phi i1 [ false, %28 ], [ false, %16 ], [ false, %2 ], [ %51, %40 ]
  %54 = zext i1 %53 to i32
  ret i32 %54
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
